k8s/deployment.yaml
```yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: mini-deployment
  namespace: minishop
  labels:
    app: mini-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: mini-app

  template:
    metadata:
      labels:
        app: mini-app

    spec:
      containers:
        - name: mini-container
          image: bhuvana20/mini:v1.0.0

          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: minishop-service
  namespace: minishop
spec:
  selector:
    app: minishop

  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000

  type: ClusterIP
