k8s/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minishop-route
  namespace: minishop
spec:
  parentRefs:
    - name: minishop-gateway

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: minishop-service
          port: 80
